--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^0.4.2",
+    "rc-slider": "^8.6.6",
     "react": "^16.7.0",
     "react-calendar": "^2.18.1",
     "react-dom": "^16.7.0",
