--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/floating-label": "^1.1.0",
+    "@material/textfield": "^1.1.1",
     "bootstrap": "^4.3.1",
     "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
