--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rc-slider": "^8.6.6",
     "react": "^16.8.4",
     "react-calendar": "^2.18.1",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.4",
     "react-google-maps": "^9.4.5",
     "react-load-script": "0.0.6",
