--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "material-ui-search-bar": "^0.4.2",
         "rc-slider": "^8.6.6",
         "react": "^16.8.4",
+        "react-bootstrap-time-picker": "^1.0.3",
         "react-calendar": "^2.18.1",
         "react-device-detect": "^1.6.2",
         "react-dom": "^16.8.4",
         "react-google-maps": "^9.4.5",
+        "react-infinite-calendar": "^2.3.1",
         "react-load-script": "0.0.6",
         "react-multiple-datepicker": "^0.1.0",
         "react-places-autocomplete": "^7.2.1",
