--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material/floating-label": "^1.1.0",
         "@material/textfield": "^1.1.1",
+        "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
         "google-maps-react": "^2.0.2",
         "material-ui": "^0.20.2",
