--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "tripfer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "material-ui": "^0.20.2",
-    "rc-slider": "^8.6.6",
-    "react": "^16.8.6",
-    "react-calendar": "^2.18.1",
-    "react-device-detect": "^1.6.2",
-    "react-dom": "^16.8.6",
-    "react-infinite-calendar": "^2.3.1",
-    "react-multiple-datepicker": "^0.1.0",
-    "react-places-autocomplete": "^7.2.1",
-    "react-redux": "^7.0.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
-    "react-star-ratings": "^2.3.0",
-    "reactstrap": "^8.0.0",
-    "redux": "^4.0.1",
-    "require-context": "^1.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "tripfer",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "material-ui": "^0.20.2",
+        "rc-slider": "^8.6.6",
+        "react": "^16.8.6",
+        "react-calendar": "^2.18.1",
+        "react-device-detect": "^1.6.2",
+        "react-dom": "^16.8.6",
+        "react-infinite-calendar": "^2.3.1",
+        "react-multiple-datepicker": "^0.1.0",
+        "react-places-autocomplete": "^7.2.1",
+        "react-redux": "^7.0.2",
+        "react-router-dom": "^5.0.0",
+        "react-scripts": "3.0.0",
+        "react-star-ratings": "^2.3.0",
+        "reactstrap": "^8.0.0",
+        "redux": "^4.0.1",
+        "axios": "^0.18.0",
+        "require-context": "^1.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
