--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "tripfer",
+    "name": "start2trip",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
         "material-ui": "^0.20.2",
         "rc-slider": "^8.6.6",
@@ -16,10 +17,10 @@
         "react-redux": "^7.0.2",
         "react-router-dom": "^5.0.0",
         "react-scripts": "3.0.0",
+        "react-star-rating": "^1.4.2",
         "react-star-ratings": "^2.3.0",
         "reactstrap": "^8.0.0",
         "redux": "^4.0.1",
-        "axios": "^0.18.0",
         "require-context": "^1.1.0"
     },
     "scripts": {
