--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-infinite-calendar": "^2.3.1",
         "react-multiple-datepicker": "^0.1.0",
         "react-places-autocomplete": "^7.2.1",
+        "react-rater": "^5.0.5",
         "react-redux": "^7.0.2",
         "react-router-dom": "^5.0.0",
         "react-scripts": "3.0.0",
