--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-scripts": "3.0.0",
         "react-star-rating": "^1.4.2",
         "react-star-ratings": "^2.3.0",
+        "react-telephone-input": "^4.73.4",
         "reactstrap": "^8.0.0",
         "redux": "^4.0.1",
         "require-context": "^1.1.0"
