--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
+        "browser-image-resizer": "^2.0.1",
+        "j-i-c": "^2.0.2",
         "material-ui": "^0.20.2",
         "rc-slider": "^8.6.6",
         "react": "^16.8.6",
@@ -24,7 +26,9 @@
         "reactstrap": "^8.0.0",
         "redux": "^4.0.1",
         "require-context": "^1.1.0",
-        "scroll-lock": "^2.1.0"
+        "resize-img": "^1.1.2",
+        "scroll-lock": "^2.1.0",
+        "universal-cookie": "^4.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
