--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "react-beautiful-dnd": "^11.0.3",
         "react-calendar": "^2.18.1",
         "react-device-detect": "^1.6.2",
+        "react-dnd": "^7.4.5",
+        "react-dnd-html5-backend": "^7.4.4",
         "react-dom": "^16.8.6",
         "react-drag-and-drop": "^3.0.0",
         "react-infinite-calendar": "^2.3.1",
