--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.0.2",
         "axios": "^0.18.0",
         "bootstrap": "^4.3.1",
         "browser-image-resizer": "^2.0.1",
