--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dnd-html5-backend": "^7.4.4",
         "react-dom": "^16.8.6",
         "react-drag-and-drop": "^3.0.0",
+        "react-images": "^1.0.0",
         "react-infinite-calendar": "^2.3.1",
         "react-multiple-datepicker": "^0.1.0",
         "react-places-autocomplete": "^7.2.1",
