--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.2.0",
-        "axios": "^0.18.0",
+        "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "browser-image-resizer": "^2.0.1",
         "j-i-c": "^2.0.2",
@@ -26,6 +26,7 @@
         "react-redux": "^7.0.2",
         "react-router-dom": "^5.0.0",
         "react-scripts": "3.0.0",
+        "react-showdown": "^1.6.0",
         "react-star-rating": "^1.4.2",
         "react-star-ratings": "^2.3.0",
         "react-telephone-input": "^4.73.4",
@@ -34,6 +35,7 @@
         "require-context": "^1.1.0",
         "resize-img": "^1.1.2",
         "scroll-lock": "^2.1.0",
+        "showdown": "^1.9.0",
         "universal-cookie": "^4.0.0"
     },
     "scripts": {
