--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "bundle-collapser": "^1.3.0",
+        "envify": "^4.1.0",
+        "uglify-js": "^3.6.0",
+        "uglifyify": "^5.0.1"
     }
 }
