--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "postbuild": "react-snap",
         "eject": "react-scripts eject"
     },
+
     "eslintConfig": {
         "extends": "react-app"
     },
@@ -50,6 +52,7 @@
     "devDependencies": {
         "bundle-collapser": "^1.3.0",
         "envify": "^4.1.0",
+        "react-snap": "^1.23.0",
         "uglify-js": "^3.6.0",
         "uglifyify": "^5.0.1"
     }
