--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react": "^16.8.6",
         "react-device-detect": "^1.6.2",
         "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.1",
         "react-images": "^1.0.0",
         "react-infinite-calendar": "^2.3.1",
         "react-places-autocomplete": "^7.2.1",
@@ -32,7 +33,6 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-
     "eslintConfig": {
         "extends": "react-app"
     },
