--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "browser-image-resizer": "^2.0.1",
+        "email-validator": "^2.0.4",
         "material-ui": "^0.20.2",
         "react": "^16.8.6",
         "react-device-detect": "^1.6.2",
