--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "browser-image-resizer": "^2.0.1",
         "email-validator": "^2.0.4",
         "material-ui": "^0.20.2",
+        "npm": "^6.10.3",
         "react": "^16.8.6",
         "react-device-detect": "^1.6.2",
         "react-dom": "^16.8.6",
