--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material-ui/core": "^4.2.0",
         "axios": "^0.19.0",
+        "babel-register": "^6.26.0",
         "bootstrap": "^4.3.1",
         "browser-image-resizer": "^2.0.1",
         "email-validator": "^2.0.4",
@@ -20,6 +21,7 @@
         "react-rater": "^5.0.5",
         "react-redux": "^7.0.2",
         "react-router-dom": "^5.0.0",
+        "react-router-sitemap": "^1.2.0",
         "react-scripts": "3.0.0",
         "react-showdown": "^1.6.0",
         "react-telephone-input": "^4.73.4",
@@ -55,6 +57,6 @@
         "envify": "^4.1.0",
         "react-snap": "^1.23.0",
         "uglify-js": "^3.6.0",
-        "uglifyify": "^5.0.1"
+        "uglifyify": "^5.0.2"
     }
 }
