--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
         "material-ui": "^0.20.2",
         "npm": "^6.10.3",
         "react": "^16.8.6",
+        "react-day-picker": "^7.3.2",
         "react-device-detect": "^1.6.2",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
         "react-images": "^1.0.0",
-        "react-infinite-calendar": "^2.3.1",
         "react-places-autocomplete": "^7.2.1",
         "react-rater": "^5.0.5",
         "react-redux": "^7.0.2",
