--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "material-ui": "^0.20.2",
         "npm": "^6.11.3",
         "react": "^16.10.1",
+        "react-avatar-edit": "^0.8.3",
+        "react-avatar-editor": "^11.0.7",
+        "react-cropper": "^1.3.0",
         "react-day-picker": "^7.3.2",
         "react-device-detect": "^1.9.10",
         "react-dom": "^16.10.1",
