--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "redux": "^4.0.4",
         "require-context": "^1.1.0",
         "scroll-lock": "^2.1.2",
+        "styled-components": "^4.4.1",
         "universal-cookie": "^4.0.2"
     },
     "scripts": {
