--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-telephone-input": "^4.73.4",
         "reactstrap": "^8.0.1",
         "redux": "^4.0.4",
+        "register-service-worker": "^1.6.2",
         "require-context": "^1.1.0",
         "scroll-lock": "^2.1.2",
         "styled-components": "^4.4.1",
